feat: add and map json data of the video and articles

--- a/about.html
+++ b/about.html
@@ -145,43 +145,47 @@
           <div class="others-section">
             <div class="ab-mission-vission">
               <div class="ab-mission">
-                <!-- <h2 class="about-title">Our Mission & Vission</h2> -->
                 <p>
                   EcoPrint Generation’s mission is to transform plastic waste
                   into sustainable 3D printing materials that empower education,
                   innovation, and environmental conservation—turning waste into
                   opportunity for a cleaner, smarter, and more inclusive future.
                 </p>
-                <!-- <br/> -->
-                <!-- <h2 class="about-title">Our Vision</h2> -->
                 <p>
                   A continent where every learner can touch, see, and build
                   science— powered by sustainable materials and community
                   innovation.
                 </p>
-                <!-- <ul class="tick-list-vission">
-                  <li>Lower cost, higher access</li>
-                  <li>Materials from recycled plastics</li>
-                  <li>Practical STEM for real schools</li>
-                </ul> -->
               </div>
             </div>
             <div class="ab-media">
               <div class="ab-image">
-                <img src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/zxqgxhqccjh0jhsjiq6e.jpg" alt="Image" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/zxqgxhqccjh0jhsjiq6e.jpg"
+                  alt="Image"
+                />
               </div>
               <div class="ab-video">
-                <video muted poster="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg">
-                  <source src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146482/EcoPrintGeneration/videos/k8ju7npozxfwn09uhwsq.mp4" type="video/mp4" />
+                <video
+                  muted
+                  poster="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
+                >
+                  <source
+                    src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146482/EcoPrintGeneration/videos/k8ju7npozxfwn09uhwsq.mp4"
+                    type="video/mp4"
+                  />
                 </video>
                 <button class="ab-media-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
+                  <svg width="26" height="26" viewBox="0 0 24 24">
+                    <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
+                  </svg>
+                </button>
               </div>
               <div class="ab-image">
-                <img src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/uu67vkvgqluz6kslicqq.jpg" alt="Image" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/uu67vkvgqluz6kslicqq.jpg"
+                  alt="Image"
+                />
               </div>
             </div>
           </div>
@@ -199,7 +203,10 @@
                 data-wow-duration="1s"
                 data-wow-delay="0.2s"
               >
-                <img src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146379/EcoPrintGeneration/img/ey35335fvp4e7esyu1j6.png" alt="person graphic" />
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146379/EcoPrintGeneration/img/ey35335fvp4e7esyu1j6.png"
+                  alt="person graphic"
+                />
               </div>
             </div>
             <div class="col-lg-8">
@@ -515,7 +522,7 @@
 
             <ul class="scroll-track videos-track">
               <!-- Example Card 1 -->
-              <li class="video-card bg-blue">
+              <!-- <li class="video-card bg-blue">
                 <article>
                   <div class="image-container">
                     <img
@@ -544,131 +551,7 @@
                     </header>
                   </div>
                 </article>
-              </li>
-
-              <li class="video-card bg-red">
-                <article>
-                  <div class="image-container">
-                    <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
-                      alt="TV47 Pitch"
-                    />
-                    <button class="about-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Video</h4>
-                      <h3>
-                        <a href=""
-                          >Explore our video stories showcasing sustainable
-                          manufacturing and technological innovation in
-                          recycling.</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Dec 11, 2022</small> | <small>TV47 Kenya</small>
-                      </p>
-                    </header>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-pink">
-                <article>
-                  <div class="image-container">
-                    <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
-                      alt="Dominique Ernst"
-                    />
-                    <button class="about-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Video</h4>
-                      <h3>
-                        <a href=""
-                          >See how we empower communities to create value from
-                          recycled materials through 3D printing technology.</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>May 19, 2022</small> |
-                        <small>Dominique Ernst</small>
-                      </p>
-                    </header>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-pink">
-                <article>
-                  <div class="image-container">
-                    <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146386/EcoPrintGeneration/img/ksy8kqdvbamgto9ce6j1.jpg"
-                      alt="Dominique Ernst"
-                    />
-                    <button class="about-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Video</h4>
-                      <h3>
-                        <a href=""
-                          >See how we empower communities to create value from
-                          recycled materials through 3D printing technology.</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>May 19, 2022</small> |
-                        <small>Dominique Ernst</small>
-                      </p>
-                    </header>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-pink">
-                <article>
-                  <div class="image-container">
-                    <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
-                      alt="Dominique Ernst"
-                    />
-                    <button class="about-play" type="button">
-                      <svg width="26" height="26" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7-11-7z" fill="currentColor" />
-                      </svg>
-                    </button>
-                  </div>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Video</h4>
-                      <h3>
-                        <a href=""
-                          >See how we empower communities to create value from
-                          recycled materials through 3D printing technology.</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>May 19, 2022</small> |
-                        <small>Dominique Ernst</small>
-                      </p>
-                    </header>
-                  </div>
-                </article>
-              </li>
+              </li> -->
             </ul>
 
             <button class="scroll-btn right">&#10095;</button>
@@ -689,8 +572,8 @@
               &#10094;
             </button>
 
-            <ul class="scroll-track videos-track">
-              <li class="video-card bg-blue">
+            <ul class="scroll-track articles-track">
+              <!-- <li class="bg-blue">
                 <article>
                   <div class="content">
                     <header>
@@ -722,143 +605,7 @@
                     </main>
                   </div>
                 </article>
-              </li>
-
-              <li class="video-card bg-red">
-                <article>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Article</h4>
-                      <h3>
-                        <a href=""
-                          >Shaping the Future of 3D Printing with Recycled
-                          Materials</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Jan 7, 2020</small> |
-                        <small>Daily Nation</small> |
-                        <small>By Margaret Maina</small>
-                      </p>
-                    </header>
-                    <main>
-                      <p>
-                        E3D Print Generation is a sustainable 3D printing
-                        company focused on converting recycled materials into
-                        useful, eco-friendly products. The firm combines
-                        creativity and innovation to offer cost-effective
-                        small-scale manufacturing, prototyping, and educational
-                        programs. Its mission is to promote environmental
-                        sustainability through technology by reducing plastic
-                        waste and empowering communities to create value from
-                        recycled materials.
-                      </p>
-                    </main>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-pink">
-                <article>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Article</h4>
-                      <h3>
-                        <a href=""
-                          >Shaping the Future of 3D Printing with Recycled
-                          Materials</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Jan 7, 2020</small> |
-                        <small>Daily Nation</small> |
-                        <small>By Margaret Maina</small>
-                      </p>
-                    </header>
-                    <main>
-                      <p>
-                        E3D Print Generation is a sustainable 3D printing
-                        company focused on converting recycled materials into
-                        useful, eco-friendly products. The firm combines
-                        creativity and innovation to offer cost-effective
-                        small-scale manufacturing, prototyping, and educational
-                        programs. Its mission is to promote environmental
-                        sustainability through technology by reducing plastic
-                        waste and empowering communities to create value from
-                        recycled materials.
-                      </p>
-                    </main>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-pink">
-                <article>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Article</h4>
-                      <h3>
-                        <a href=""
-                          >Shaping the Future of 3D Printing with Recycled
-                          Materials</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Jan 7, 2020</small> |
-                        <small>Daily Nation</small> |
-                        <small>By Margaret Maina</small>
-                      </p>
-                    </header>
-                    <main>
-                      <p>
-                        E3D Print Generation is a sustainable 3D printing
-                        company focused on converting recycled materials into
-                        useful, eco-friendly products. The firm combines
-                        creativity and innovation to offer cost-effective
-                        small-scale manufacturing, prototyping, and educational
-                        programs. Its mission is to promote environmental
-                        sustainability through technology by reducing plastic
-                        waste and empowering communities to create value from
-                        recycled materials.
-                      </p>
-                    </main>
-                  </div>
-                </article>
-              </li>
-
-              <li class="video-card bg-blue">
-                <article>
-                  <div class="content">
-                    <header>
-                      <h4 class="tag">Article</h4>
-                      <h3>
-                        <a href=""
-                          >Shaping the Future of 3D Printing with Recycled
-                          Materials</a
-                        >
-                      </h3>
-                      <p class="meta">
-                        <small>Jan 7, 2020</small> |
-                        <small>Daily Nation</small> |
-                        <small>By Margaret Maina</small>
-                      </p>
-                    </header>
-                    <main>
-                      <p>
-                        E3D Print Generation is a sustainable 3D printing
-                        company focused on converting recycled materials into
-                        useful, eco-friendly products. The firm combines
-                        creativity and innovation to offer cost-effective
-                        small-scale manufacturing, prototyping, and educational
-                        programs. Its mission is to promote environmental
-                        sustainability through technology by reducing plastic
-                        waste and empowering communities to create value from
-                        recycled materials.
-                      </p>
-                    </main>
-                  </div>
-                </article>
-              </li>
+              </li> -->
             </ul>
 
             <button class="scroll-btn right">&#10095;</button>
