feat: animate about page on scroll

--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
       href="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
       fetchpriority="high"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -127,7 +128,7 @@
 
       <section class="aboutus section-pad" id="about">
         <div class="container">
-          <div class="story-section">
+          <div class="story-section animate zoom-in">
             <div class="story">
               <h2 class="about-title">Our Story</h2>
               <p>
@@ -142,7 +143,7 @@
               </p>
             </div>
           </div>
-          <div class="others-section">
+          <div class="others-section animate zoom-in">
             <div class="ab-mission-vission">
               <div class="ab-mission">
                 <p>
@@ -193,7 +194,10 @@
       </section>
 
       <!-- Core values -->
-      <section class="core-values about-us section" id="values">
+      <section
+        class="core-values about-us section animate slide-left"
+        id="values"
+      >
         <!-- <div class=""> -->
         <div class="container">
           <div class="row">
@@ -284,7 +288,7 @@
       </section>
 
       <!-- ===================== PROCESS QUEST ===================== -->
-      <section class="process-quest section-pad" id="process">
+      <section class="process-quest section-pad animate zoom-in" id="process">
         <div class="container">
           <!-- Header -->
           <header class="pq-head">
@@ -453,7 +457,7 @@
 
           <div class="row portfolio-row">
             <!-- SEO Analysis -->
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
@@ -470,7 +474,7 @@
             </div>
 
             <!-- Website Reporting -->
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
@@ -487,7 +491,7 @@
             </div>
 
             <!-- Performance Tests -->
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
@@ -515,7 +519,7 @@
             <p>Watch our most featured media interviews and stories.</p>
           </div>
 
-          <div class="scroll-wrapper">
+          <div class="scroll-wrapper animate fade-in">
             <button class="scroll-btn left" aria-label="Scroll left">
               &#10094;
             </button>
@@ -568,7 +572,10 @@
           </div>
 
           <div class="scroll-wrapper">
-            <button class="scroll-btn left" aria-label="Scroll left">
+            <button
+              class="scroll-btn left"
+              aria-label="Scroll left animate fade-in"
+            >
               &#10094;
             </button>
 
@@ -613,7 +620,7 @@
         </div>
       </section>
 
-      <section class="our-team" id="team">
+      <section class="our-team animate slide-left" id="team">
         <div class="responsive-container-block outer-container">
           <div class="responsive-container-block inner-container">
             <p class="text-blk section-head-text">Meet Our Team</p>
@@ -688,7 +695,7 @@
         </div>
       </section>
 
-      <section class="awards-recognitions" id="awards">
+      <section class="awards-recognitions animate zoom-in" id="awards">
         <div class="content-section">
           <!-- Left Text Section -->
           <div class="left-content">
@@ -723,7 +730,7 @@
         </div>
       </section>
 
-      <section class="pl-section" id="partners">
+      <section class="pl-section animate slide-up" id="partners">
         <div class="pl-heading">
           <h2>Our Supporters</h2>
         </div>
@@ -792,6 +799,7 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/animate.js"></script>
   </body>
 </html>
