--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <!-- Defer non-critical CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -29,31 +29,6 @@
     </noscript>
 
     <style>
-      /* Critical CSS - Above the fold */
-      /* body {
-        margin: 0;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-        line-height: 1.6;
-        color: #333;
-      } */
-
-      /* .navbar { */
-      /* background: #fff;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-      }
-      
-      .hero {
-        position: relative;
-        height: 100vh;
-        min-height: 500px;
-        overflow: hidden;
-        background: #000;
-      } */
-
-      /* Lazy load indicator */
       .lazy {
         opacity: 0;
         transition: opacity 0.3s;
@@ -823,6 +798,6 @@
         <p>&copy; 2025 EcoPrint Generation. All Rights Reserved.</p>
       </div>
     </footer>
-    <script defer src="script.js"></script>
+    <script defer src="js/script.js"></script>
   </body>
 </html>
