--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eco Print Shop</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -821,6 +821,6 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script defer src="js/script.js"></script>
   </body>
 </html>
